[package]
name = "dlopen-rs"
version = "0.7.3"
edition = "2024"
rust-version = "1.85.0"
authors = ["wzhao <1207410841@qq.com>"]
readme = "README.md"
repository = "https://github.com/weizhiao/dlopen-rs"
keywords = ["dlopen", "elf", "unix", "loader"]
categories = ["no-std", "os", "embedded"]
license = "Apache-2.0"
description = "A dynamic linker fully implemented in Rust."
exclude = [".gitignore", "/example-dylib", "check.sh"]

[workspace]
members = ["example-dylib", "cdylib"]
resolver = "2"

[dependencies.spin]
version = "0.10.0"
default-features = false
features = ["rwlock", "lazy", "mutex", "spin_mutex"]

[dependencies.indexmap]
version = '2.9.0'

[dependencies.elf_loader]
version = "0.13.0"
default-features = false
features = ["use-syscall", "log"]

[dependencies]
bitflags = "2.6.0"
log = "0.4.22"
syscalls = "0.7.0"

[features]
default = ["fs", "debug"]
use-ldso = ["tls"]
# enable this when you want to use gdb/lldb to debug the loaded dynamic libraries
debug = ["use-ldso"]
# enable std
fs = []
# enable this when you need to use thread loca
tls = []
# activate specific versions of symbols for dynamic library loading
version = ["elf_loader/version"]

[dev-dependencies]
criterion = "0.5.1"
libloading = "0.8.5"
env_logger = "0.11.6"
libc = "0.2.149"

[[bench]]
name = "dlopen"
harness = false
required-features = ["fs", "tls"]

[[bench]]
name = "dlopen_llvm"
harness = false
required-features = ["fs", "tls"]

[[bench]]
name = "dlsym"
harness = false
required-features = ["fs", "tls"]

[[bench]]
name = "dl_iterate_phdr"
harness = false
required-features = ["fs", "tls"]

[[example]]
name = "dlopen"
required-features = ["tls"]
